<resources>
    <string name="app_name">Contentos SDK Demo</string>
    <string name="action_settings">Settings</string>
    <string name="wallet_password_hint">Enter your password</string>
    <string name="wallet_open">Open Wallet</string>
    <string name="wallet_create">Create Wallet</string>
    <string name="wallet_open_failed">Failed open wallet</string>
    <string name="title_activity_op">OpActivity</string>
    <string name="tab_title">Using account</string>
    <string name="tab_text_transfer">Transfer</string>
    <string name="tab_text_post">Post</string>
    <string name="tab_text_create_account">+Account</string>
    <string name="tab_text_me">Me</string>

    <string name="transfer_recv_hint">To whom</string>
    <string name="transfer_amount_hint">How much</string>
    <string name="transfer_btn_text">Transfer</string>
    <string name="transfer_err_amount">Invalid amount value</string>

    <string name="post_title_hint">title</string>
    <string name="post_content_hint">content</string>
    <string name="post_btn_text">Post</string>

    <string name="new_acc_name_hint">account name</string>
    <string name="new_acc_btn_text">Create</string>

    <string name="me_account">Account Name</string>
    <string name="me_private_key">Private Key</string>
    <string name="me_public_key">Public Key</string>
    <string name="me_switch_btn_text">Switch</string>
    <string name="me_import_btn_text">Import</string>
    <string name="me_account_hint">Enter account name</string>
    <string name="me_import_hint_title">Import Hint</string>
    <string name="me_import_hint1">You need to copy the private key string into the clipboard first.</string>
    <string name="me_import_hint2">The private key from clipboard is already in your wallet.</string>

</resources>
